[package]
name = "chp_5_6_hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
blake3 = "1.3.3"
criterion = "0.4.0"
criterion-plot = "0.5.0"
crypto-common = "0.1.6"
generic-array = "0.14.6"
rand = "0.8.5"
sha2 = "0.10.6"
