[package]
name = "chp_8_hw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
cfg-if = "1.0.0"
thiserror = "^1.0"
secrecy = "0.8.0"
serde = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tylift = "0.3.0"
zeroize = "1.5.7"
zeroize_derive = "^1.3"
clap = { version = "4.0.32", features = ["derive"] }

[features]
mal = []

[dev-dependencies]
criterion = "0.3"
test-log = {version = "0.2", default-features = false, features = ["trace"]}

[[bench]]
name = "bench"
harness = false
