[package]
name = "code_examples_hw1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.7.2"
rand = { version = "0.8" }
anyhow   ="1.0"
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "bench"
harness = false
